feat(common): beyond dimensions (Not Complete)
feat(common): FTBQ immortalers delight

--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
@@ -693,7 +693,7 @@
     "ftbquests.chapter.irons.quest4928989186775899308.description2": "Charged creepers can be spawned via Maid Mod altar, or by using lightning spells.",
     "ftbquests.chapter.irons.quest4928989186775899308.description3": "Use rapid clicking to obtain quickly.",
     "ftbquests.chapter.irons.quest5131965702523572010.description1": "50% drop chance after defeating the Echo of Tyros.",
-    "ftbquests.chapter.irons.quest5131965702523572010.description2": "What, you say you can’t beat him? Just give him some vodka!"
+    "ftbquests.chapter.irons.quest5131965702523572010.description2": "What, you say you can’t beat him? Just give him some vodka!",
     "ftbquests.chapter.irons.quest521856152132857915.description1": "The basic material for crafting armor.",
     "ftbquests.chapter.irons.quest5339063644055888132.description1": "Craft your scrolls at the Scroll Scribing Table. Place ink, paper, and the proper medium from left to right.",
     "ftbquests.chapter.irons.quest5339063644055888132.title": "Artificial Scrolls",
@@ -933,11 +933,12 @@
     "ftbquests.chapter.sakura.quest5864994101504078406.description1": "Sniffers periodically dig up ancient seeds from mossy mud and other blocks. Different biomes yield different seeds.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description2": "Evolutcorn Grains: Plains, plant on farmland.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description3": "Pearlip: Jungle, plant on dirt.",
-    "ftbquests.chapter.sakura.quest5864994101504078406.description4": "Himekaido: Forest, plant on farmland. Normally a shrub, but bone meal makes it a tree.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description4": "Himekaido: Forest, plant on dirt farmland. Normally a shrub, but when on moist dirt farmland, bone meal makes it a tree.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description5": "Leisamboo: River, plant on dirt one block below water surface.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description6": "Kwat Wheat: Crimson Forest, plant on farmland, soul soil, or soul sand.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description7": "Warped Laurel: Warped Forest, plant on farmland.",
-    "ftbquests.chapter.sakura.quest5864994101504078406.description8": "Alfalfa, Torchflower, Pitcher Plant: All biomes, plant on farmland.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description8": "Travarice: Meadow or Mountain biomes, plant on dirt farmland. This plant grows very tall, so make sure there's enough vertical space.", 
+    "ftbquests.chapter.sakura.quest5864994101504078406.description9": "Alfalfa, Torchflower, Pitcher Plant: All biomes, plant on farmland.",
     "ftbquests.chapter.sakura.quest5864994101504078406.title": "Ancient Seeds",
     "ftbquests.chapter.sakura.quest6309130633612470407.description1": "The Enchantal Cooler extracts the essence of ingredients. It requires lapis as an energy source.",
     "ftbquests.chapter.sakura.quest6309130633612470407.title": "Enchantal Cooler",
