--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
@@ -930,11 +930,12 @@
   "ftbquests.chapter.sakura.quest5864994101504078406.description1": "成年嗅探兽会定期在苔藓泥巴等一系列方块中嗅探古代种子，不同的群系得到的古代种子不同。",
   "ftbquests.chapter.sakura.quest5864994101504078406.description2": "白垩玉黍：平原，种植于耕地",
   "ftbquests.chapter.sakura.quest5864994101504078406.description3": "棱蕉：丛林，种植于泥土",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description4": "姬海棠：森林，种植于耕地，正常为灌木，骨粉催熟后变为乔木",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description4": "姬海棠：森林，种植于普通耕地，正常为灌木，在湿润耕地上骨粉催熟后变为乔木",
   "ftbquests.chapter.sakura.quest5864994101504078406.description5": "溪竹：河流，种植于水面下一格的泥土",
   "ftbquests.chapter.sakura.quest5864994101504078406.description6": "瓦斯麦：绯红森林，种植于耕地、灵魂土、灵魂沙",
   "ftbquests.chapter.sakura.quest5864994101504078406.description7": "诡怨桂：诡异森林，种植于耕地",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description8": "古苜蓿、火把花、瓶子草：全群系，种植于耕地。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description8": "菅米：草甸与山峰群系，种植于普通耕地。这个作物非常高，注意留出足够空间。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description9": "古苜蓿、火把花、瓶子草：全群系，种植于耕地。",
   "ftbquests.chapter.sakura.quest5864994101504078406.title": "古代种子",
   "ftbquests.chapter.sakura.quest6309130633612470407.description1": "魔凝机可以提取出食材的精华。它需要输入青金石作为能量来源。",
   "ftbquests.chapter.sakura.quest6309130633612470407.title": "魔凝机",
