feat(common): beyond dimensions

--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
@@ -170,7 +170,7 @@
     "ftbquests.chapter.bumble.quest7670110343942178848.description3": "Trading once unlocks the &cBee Queen&r questline; see Bumblezone advancements for tasks. Rewards include &bRoyal Jelly&r, and upon full completion, &bEssence of the Bees&r.",
     "ftbquests.chapter.bumble.quest7670110343942178848.description4": "&bRoyal Jelly&r is essential for Potion Candles, and &bEssence of the Bees&r is required for later steps. Only after consuming it can you find the compass to the &6Sempiternal Sanctums&r and enter.",
     "ftbquests.chapter.bumble.quest7670110343942178848.title": "Find the Queen",
-    "ftbquests.chapter.bumble.title": "&aQueen of Bumblezone",
+    "ftbquests.chapter.bumble.title": "&5Queen of Bumblezone",
     "ftbquests.chapter.cage.quest2481019638228669873.description1": "To achieve greater speed, you need to master the power of the Sculk…",
     "ftbquests.chapter.cage.quest3111694662710183164.description1": "&o&5Ordinary knowledge no longer satisfies you. You begin to seek forbidden knowledge…&r",
     "ftbquests.chapter.cage.quest3111694662710183164.description2": "Set up the right environment inside a Mob Cage, insert DNA, and the cage will automatically produce creatures. When they mature, right-click with a sword to obtain their drops.",
@@ -557,6 +557,39 @@
     "ftbquests.chapter.create_advance.quest9049102451793150499.description1": "&aIdea: Sugarcane → press → paper; Sand + paper → mix → sandpaper. Quartz + redstone → mix → crystal → grind with sandpaper → combine with metal plates.",
     "ftbquests.chapter.create_advance.quest9049102451793150499.title": "&6Basic: Electron Tubes \\& Vacuum Tubes",
     "ftbquests.chapter.create_advance.title": "&5Veteran Engineer",
+    "ftbquests.chapter.dimensions.quest1871256334742492087.description1": "Sneak + right-click with empty hand to bind to the dimension network the current player is in. Dimension network administrators can sneak + right-click with empty hand to unbind.",
+    "ftbquests.chapter.dimensions.quest1871256334742492087.description2": "This block can expose the entire storage space of the dimension network. By connecting with storage buses from other mods (such as Create’s Packager), you can manage all items in the dimension network. It also supports direct interaction with various pipes and hoppers.",
+    "ftbquests.chapter.dimensions.quest1935765613092955945.description1": "Using it allows experience to be stored in the network and maintains experience at a single extraction amount. Sneak-use to adjust the extraction amount. While holding an Experience Rod in the network, middle-clicking the experience fluid allows you to withdraw experience.",
+    "ftbquests.chapter.dimensions.quest1935765613092955945.description2": "&e[WARN] Experience fluid beyond dimensions is not compatible with Create and requires mixing conversion.",
+    "ftbquests.chapter.dimensions.quest2529637865491029484.description1": "Over time, this rift gradually stabilizes. By modifying the rift, you can form a gateway to the other side, transmitting matter and energy across.",
+    "ftbquests.chapter.dimensions.quest2529637865491029484.description2": "After building a portal frame with expensive materials, the passage stabilizes and can transmit matter and energy to the opposite side.",
+    "ftbquests.chapter.dimensions.quest2529637865491029484.description3": "This spacetime rift can be used to store massive amounts of matter and energy, and can be accessed anytime by pressing &2[O]&r.",
+    "ftbquests.chapter.dimensions.quest2529637865491029484.title": "Create a Gateway",
+    "ftbquests.chapter.dimensions.quest3595179727660997213.description1": "There seem to be fragments on the other side, apparently dropped when the rift was broken, and they continue to increase over time.",
+    "ftbquests.chapter.dimensions.quest3595179727660997213.description2": "These fragments contain spacetime energy and seem to be usable.",
+    "ftbquests.chapter.dimensions.quest3595179727660997213.title": "Crystals of Spacetime",
+    "ftbquests.chapter.dimensions.quest4775138932613252.description1": "Sneak + right-click with empty hand to bind to the dimension network the current player is in. Dimension network administrators can sneak + right-click with empty hand to unbind.",
+    "ftbquests.chapter.dimensions.quest4775138932613252.description2": "Once bound, any player can access the network, regardless of membership.",
+    "ftbquests.chapter.dimensions.quest4821770502208368981.description1": "Once bound, any player can access the network, regardless of membership.",
+    "ftbquests.chapter.dimensions.quest4994870183790373882.description1": "Looks like you’re really bored, here’s a TV for you to watch.",
+    "ftbquests.chapter.dimensions.quest4994870183790373882.title": "&6Hidden: Tech Modpack?",
+    "ftbquests.chapter.dimensions.quest5465403080953689266.description1": "Automatically extracts food from the bound network to feed the player. After use, open the menu to set working mode and filters.",
+    "ftbquests.chapter.dimensions.quest6181724146731165416.description1": "Sneak + right-click with empty hand to bind to the dimension network the current player is in. Dimension network administrators can sneak + right-click with empty hand to unbind.",
+    "ftbquests.chapter.dimensions.quest6181724146731165416.description2": "The network interface has 27 marker slots and 27 storage slots. It can use pipes from other mods for input/output and can store any resource type supported by the dimension network. Breaking it drops a compressed matter sphere containing its contents and the block itself.",
+    "ftbquests.chapter.dimensions.quest6181724146731165416.description3": "Each tick, the network interface attempts to return items in storage slots that don’t match markers back to the network, and pulls marked items from the dimension network into corresponding slots. Every 9 ticks, if popup mode is enabled, the interface ejects marked items into surrounding valid blocks.",
+    "ftbquests.chapter.dimensions.quest6181724146731165416.description4": "The network pump can actively extract resources from containers on its six sides into the dimension network, once every 10 ticks. Each extraction has no rate limit and can theoretically empty the entire target container. It can extract any resource type supported by the network. It has filter slots for whitelist/blacklist settings.",
+    "ftbquests.chapter.dimensions.quest766235599067915222.description1": "With the help of soul fragments of the Echo of Tyros,First Flamebearer, a corner of spacetime is torn open. But the rift is not yet large enough and still needs time to stabilize.",
+    "ftbquests.chapter.dimensions.quest766235599067915222.description2": "[INFO]&b New mod added in 5.4.2, aimed at solving severe lag caused by large-scale storage in late game. Short-term players can skip it. The Building Staff can directly extract blocks from the network for placement.",
+    "ftbquests.chapter.dimensions.quest766235599067915222.subtitle": "Chapter Author: Polaris_Light",
+    "ftbquests.chapter.dimensions.quest766235599067915222.title": "&6Tear Open a Corner of Spacetime",
+    "ftbquests.chapter.dimensions.quest7683465712072555335.description1": "Collects dropped items, experience, and fluids within range. After use, open the menu to set filters and working mode.",
+    "ftbquests.chapter.dimensions.quest7727442900409044177.description1": "Sneak + right-click with empty hand to bind to the dimension network the current player is in. Dimension network administrators can sneak + right-click with empty hand to unbind.",
+    "ftbquests.chapter.dimensions.quest7727442900409044177.description2": "Place the blueprint interface next to the schematicannon to supply blocks from the network to the schematicannon.",
+    "ftbquests.chapter.dimensions.quest8702154082179339918.description1": "Members can only access the network, but cannot bind network terminals or invite others.",
+    "ftbquests.chapter.dimensions.quest8702154082179339918.description2": "Administrators can invite others, while owners can bind network terminals and destroy the network.",
+    "ftbquests.chapter.dimensions.quest8702154082179339918.description3": "Permissions can be managed through the network controller.",
+    "ftbquests.chapter.dimensions.quest8702154082179339918.title": "Permission Control",
+    "ftbquests.chapter.dimensions.title": "&5Dimension Ripper",
     "ftbquests.chapter.crockpot.quest1072910525105994334.description1": "Milk Hat is a great source of hunger and saturation, but its durability is too low.",
     "ftbquests.chapter.crockpot.quest1072910525105994334.title": "Milk Hat Made from Pig Nose",
     "ftbquests.chapter.crockpot.quest1160574799622916336.description1": "Big portions, very filling.",
@@ -974,7 +1007,7 @@
     "ftbquests.chapter.storage.quest1376433190469768193.description1": "Bags for special items, akin to the vanilla shulker‑like sacks.",
     "ftbquests.chapter.storage.quest1376433190469768193.description2": "Controls and logic are the same as the backpack.",
     "ftbquests.chapter.storage.quest1376433190469768193.title": "Bag",
-    "ftbquests.chapter.storage.quest1632234935913171738.description1": "Chests are good for lots of messy items and non‑stackables, but they cause more lag.",
+    "ftbquests.chapter.storage.quest1632234935913171738.description1": "Chests are good for lots of messy items and non‑stackables, but they cause more lag. These Chests could be mounted on moving contrptations like vanilla chests, but barrels are better.",
     "ftbquests.chapter.storage.quest2391315614506680509.description1": "Use Capacity Upgrades at the Smithing Table to expand backpacks and Crystal Box storage.",
     "ftbquests.chapter.storage.quest2391315614506680509.title": "Capacity Upgrade",
     "ftbquests.chapter.storage.quest249114456431522596.description1": "Ender Drawers share one storage space per item. Compared to opaque Void Chests, they're better for item transport.",
@@ -993,7 +1026,7 @@
     "ftbquests.chapter.storage.quest6598230013459523962.description1": "Crystal Drawers store massive amounts of one item without NBT.",
     "ftbquests.chapter.storage.quest6598230013459523962.description2": "Tier 1 holds 64 stacks. Capacity Upgrades add 64 stacks per upgrade.",
     "ftbquests.chapter.storage.quest6598230013459523962.description3": "Crystal Drawers support the same interaction logic as backpacks.",
-    "ftbquests.chapter.storage.quest6690727180952870528.description1": "Barrels are great as storage attached to moving contraptions.",
+    "ftbquests.chapter.storage.quest6690727180952870528.description1": "Barrels are great as storage mounted to moving contraptions.",
     "ftbquests.chapter.storage.quest6690727180952870528.description2": "For truly large volumes, use Functional storage.",
     "ftbquests.chapter.storage.quest6979187122773815040.description1": "As the name implies, the Ender Backpack accesses your Ender Chest; it also behaves like a backpack and can pull items normally.",
     "ftbquests.chapter.storage.quest6979187122773815040.description2": "You can nest a Space Backpack inside the Ender Backpack. An ideal warehouse is Ender Backpack → Space Backpack → Backpack → Box, storing up to 1 billion items and auto‑categorizing 31,104 item types.",
