--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
@@ -170,7 +170,7 @@
   "ftbquests.chapter.bumble.quest7670110343942178848.description3": "交易一次后可以开启\u0026c蜂后\u0026r的系列任务，具体的任务请看黄蜂领域的进度界面。完成这些任务后可以获得\u0026b蜂王浆\u0026r；全部完成后获得\u0026b蜂之精华\u0026r。",
   "ftbquests.chapter.bumble.quest7670110343942178848.description4": "\u0026b蜂王浆\u0026r是制作药水蜡烛的关键道具，而\u0026b蜂之精华\u0026r是后续流程的必备物品。只有吃下\u0026b蜂之精华\u0026r，才能在\u00266黄蜂领域\u0026r的结构中找到指向\u00266永恒圣所\u0026r的指南针，并进入\u00266永恒圣所\u0026r。",
   "ftbquests.chapter.bumble.quest7670110343942178848.title": "寻找女王",
-  "ftbquests.chapter.bumble.title": "\u0026a黄金乡女王",
+  "ftbquests.chapter.bumble.title": "\u00265黄金乡女王",
   "ftbquests.chapter.cage.quest2481019638228669873.description1": "要做到更快的速度，你需要掌握幽匿的力量……",
   "ftbquests.chapter.cage.quest3111694662710183164.description1": "\u0026o\u00265普通的知识已经满足不了你了，你开始去寻找一些禁忌的知识……\u0026r",
   "ftbquests.chapter.cage.quest3111694662710183164.description2": "在生物笼内铺设合适的环境，将 DNA 放入生物笼内，生物笼就可以自动生产生物。待生物成熟后，用剑右击生物笼就能获得生物的战利品。",
@@ -590,6 +590,39 @@
   "ftbquests.chapter.crockpot.quest8643251050729956122.description2": "\u0026b鸟笼可以将腐肉转换为有用的物品，并获取一些难以通过种植增产的作物的种子。",
   "ftbquests.chapter.crockpot.quest8643251050729956122.title": "笼中鸟",
   "ftbquests.chapter.crockpot.title": "\u0026e美食初心者",
+  "ftbquests.chapter.dimensions.quest1871256334742492087.description1": "空手潜行右键绑定到当前玩家所在的维度网络。维度网络管理员空手潜行右键可取消绑定。",
+  "ftbquests.chapter.dimensions.quest1871256334742492087.description2": "此方块可以暴露整个维度网络的存储空间。使用其他模组的存储总线连接（比如机械动力的打包机），即可管理维度网络中所有物品。同时也支持各种管道和漏斗直接交互。",
+  "ftbquests.chapter.dimensions.quest1935765613092955945.description1": "使用可以将经验存储到网络中，并将经验维持在单次提取量。潜行使用可以调整单次使用量。在网络中手持经验棒中键经验流体可以取出经验。",
+  "ftbquests.chapter.dimensions.quest1935765613092955945.description2": "\u0026e[WARN]超越维度的经验流体与机械动力的不通用，需要搅拌转换。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.description1": "随着时间的推移，这个缝隙逐渐稳定下来。对这个缝隙进行改造，就能形成通往另一侧的门扉，向另一侧传输物质与能量。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.description2": "使用昂贵的材料制作门框后通道得以稳定，可以向对面传输物质与能量。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.description3": "这个时空间隙可以用于存储超大规模的物质与能量，并且可以随时按下 \u00262[O]\u0026r 访问。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.title": "创建门扉",
+  "ftbquests.chapter.dimensions.quest3595179727660997213.description1": "对侧似乎已有一些碎片，似乎是破开缝隙时掉落的，并且随着时间推移不断增加。",
+  "ftbquests.chapter.dimensions.quest3595179727660997213.description2": "这些碎片蕴含着时空的能量，似乎可以被拿来利用。",
+  "ftbquests.chapter.dimensions.quest3595179727660997213.title": "时空的结晶",
+  "ftbquests.chapter.dimensions.quest4775138932613252.description1": "空手潜行右键绑定到当前玩家所在的维度网络。维度网络管理员空手潜行右键可取消绑定。",
+  "ftbquests.chapter.dimensions.quest4775138932613252.description2": "绑定后允许任何玩家访问网络，无论是否为成员。",
+  "ftbquests.chapter.dimensions.quest4821770502208368981.description1": "绑定后允许任何玩家访问网络，无论是否为成员。",
+  "ftbquests.chapter.dimensions.quest4994870183790373882.description1": "看得出来你真的很闲，给你个电视自己去看吧。",
+  "ftbquests.chapter.dimensions.quest4994870183790373882.title": "\u00266隐藏：科技包？",
+  "ftbquests.chapter.dimensions.quest5465403080953689266.description1": "自动从绑定的网络中提取食物喂食玩家。使用后打开菜单，可以设定工作方式与过滤。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description1": "空手潜行右键绑定到当前玩家所在的维度网络。维度网络管理员空手潜行右键可取消绑定。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description2": "网络接口拥有27个标记槽位和27个存储槽位，可以用其他模组的管道进行输入输出，可以存储任何维度网络能存储的资源种类。破坏后会掉落保存了内容物的压缩物质球以及方块本身。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description3": "每tick，网络接口都会尝试将与标记不对应的存储槽位的物品收回网络，并从维度网络抽取标记的物品到对应槽位。每9个tick，打开了弹出模式的网络接口会将标记的物品弹出到周围的有效方块中。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description4": "网络泵则可以主动从周围六个面的容器中抽取资源进入维度网络，每10tick进行一次抽取，单次抽取没有速率限制，理论上清空整个目标容器，可以抽取任何网络支持的资源类型。内部有过滤槽，可以设置黑白名单。",
+  "ftbquests.chapter.dimensions.quest766235599067915222.description1": "借助于原初受火者的灵魂碎片，时空的一角得以被撕开。只是这个缝隙还不够大，仍需要一定时间才能稳定。",
+  "ftbquests.chapter.dimensions.quest766235599067915222.description2": "[INFO]\u0026b5.4.2新增模组，旨在解决后期大规模存储带来的严重卡顿。短期玩家可以不做。建筑手杖可以直接从网络中提取方块放置。",
+  "ftbquests.chapter.dimensions.quest766235599067915222.subtitle": "本章作者：PL",
+  "ftbquests.chapter.dimensions.quest766235599067915222.title": "\u00266撕开时空的一角",
+  "ftbquests.chapter.dimensions.quest7683465712072555335.description1": "收集范围内的掉落物、经验与流体。使用后打开菜单，可以设置过滤与工作方式。",
+  "ftbquests.chapter.dimensions.quest7727442900409044177.description1": "空手Shift右键绑定到当前玩家所在的维度网络。维度网络管理员空手Shift右键可取消绑定。",
+  "ftbquests.chapter.dimensions.quest7727442900409044177.description2": "将蓝图接口放在蓝图大炮旁边，可以从网络为蓝图加农炮提供方块。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.description1": "成员只能访问网络，不能绑定网络终端或邀请其他人成为成员。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.description2": "管理员可以邀请其他人，所有者可以绑定网络终端、摧毁网络。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.description3": "可以通过网络控制器管理权限。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.title": "权限控制",
+  "ftbquests.chapter.dimensions.title": "\u00265维度撕裂者",
   "ftbquests.chapter.farmers_delight.quest1194813050829271683.description1": "对于一些特定的生物，使用小刀击杀可以获取额外的掉落。",
   "ftbquests.chapter.farmers_delight.quest1194813050829271683.description2": "比如用小刀击杀猪可以获得火腿，击杀末影龙可以获得龙肉，击杀村民可以获取……怪肉？",
   "ftbquests.chapter.farmers_delight.quest1194813050829271683.title": "额外掉落",
@@ -971,7 +1004,7 @@
   "ftbquests.chapter.storage.quest1376433190469768193.description1": "容纳特殊物品的袋子，类似于原版的收纳袋。",
   "ftbquests.chapter.storage.quest1376433190469768193.description2": "操作逻辑与背包相同。",
   "ftbquests.chapter.storage.quest1376433190469768193.title": "袋子",
-  "ftbquests.chapter.storage.quest1632234935913171738.description1": "箱子适合存储大量杂乱的物品与不可堆叠物品，但是卡顿更高。",
+  "ftbquests.chapter.storage.quest1632234935913171738.description1": "箱子适合存储大量杂乱的物品与不可堆叠物品，但是卡顿更高。这些箱子也可以像普通箱子挂载到机械动力的动态结构上，但是更建议用桶。",
   "ftbquests.chapter.storage.quest2391315614506680509.description1": "可以在锻造台上用空间升级组件升级背包和水晶匣子的容量。",
   "ftbquests.chapter.storage.quest2391315614506680509.title": "空间升级组件",
   "ftbquests.chapter.storage.quest249114456431522596.description1": "末影抽屉对于同一物品共享同一存储空间，相较于不直观的虚空箱子更适合物品的传输。",
@@ -990,7 +1023,7 @@
   "ftbquests.chapter.storage.quest6598230013459523962.description1": "水晶匣子可以存储一种大量不带有 NBT 的物品。",
   "ftbquests.chapter.storage.quest6598230013459523962.description2": "一级可以存储64组物品，可以使用空间升级组件升级容量，每次升级增加 64 组容量。",
   "ftbquests.chapter.storage.quest6598230013459523962.description3": "水晶匣子同样支持背包的操作逻辑。",
-  "ftbquests.chapter.storage.quest6690727180952870528.description1": "桶适合粘在移动结构上当存储。",
+  "ftbquests.chapter.storage.quest6690727180952870528.description1": "桶适合挂载到移动结构上当存储。",
   "ftbquests.chapter.storage.quest6690727180952870528.description2": "大量的物品还是使用抽屉吧。",
   "ftbquests.chapter.storage.quest6979187122773815040.description1": "顾名思义，末影背包可以访问玩家的末影箱；但是它也有背包的性质，可以正常吸取物品。",
   "ftbquests.chapter.storage.quest6979187122773815040.description2": "末影背包内可以装空间背包。一个理想的仓库是 末影背包-空间背包-背包-匣子 的架构，最多可以存储 10 亿物品，自动归类 31104 种物品。",
