--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
@@ -170,7 +170,7 @@
   "ftbquests.chapter.bumble.quest7670110343942178848.description3": "交易一次後可以開啟\u0026c蜂后\u0026r的系列任務，具體的任務請看黃蜂領域的進度界面。完成這些任務後可以獲得\u0026b蜂王漿\u0026r；全部完成後獲得\u0026b蜂之精華\u0026r。",
   "ftbquests.chapter.bumble.quest7670110343942178848.description4": "\u0026b蜂王漿\u0026r是製作藥水蠟燭的關鍵道具，而\u0026b蜂之精華\u0026r是後續流程的必備物品。只有吃下\u0026b蜂之精華\u0026r，才能在\u00266黃蜂領域\u0026r的結構中找到指向\u00266永恆聖所\u0026r的指南針，並進入\u00266永恆聖所\u0026r。",
   "ftbquests.chapter.bumble.quest7670110343942178848.title": "尋找女王",
-  "ftbquests.chapter.bumble.title": "\u0026a黃金鄉女王",
+  "ftbquests.chapter.bumble.title": "\u00265黃金鄉女王",
   "ftbquests.chapter.cage.quest2481019638228669873.description1": "要做到更快的速度，你需要掌握幽匿的力量……",
   "ftbquests.chapter.cage.quest3111694662710183164.description1": "\u0026o\u00265普通的知識已經滿足不了你了，你開始去尋找一些禁忌的知識……\u0026r",
   "ftbquests.chapter.cage.quest3111694662710183164.description2": "在生物籠內鋪設合適的環境，將 DNA 放入生物籠內，生物籠就可以自動生產生物。待生物成熟後，用劍右擊生物籠就能獲得生物的戰利品。",
@@ -590,6 +590,39 @@
   "ftbquests.chapter.crockpot.quest8643251050729956122.description2": "\u0026b鳥籠可以將腐肉轉換為有用的物品，並獲取一些難以通過種植增產的作物的種子。",
   "ftbquests.chapter.crockpot.quest8643251050729956122.title": "籠中鳥",
   "ftbquests.chapter.crockpot.title": "\u0026e美食初心者",
+  "ftbquests.chapter.dimensions.quest1871256334742492087.description1": "空手潛行右鍵綁定到當前玩家所在的維度網絡。維度網絡管理員空手潛行右鍵可取消綁定。",
+  "ftbquests.chapter.dimensions.quest1871256334742492087.description2": "此方塊可以暴露整個維度網絡的存儲空間。使用其他模組的存儲總線連接（比如機械動力的打包機），即可管理維度網絡中所有物品。同時也支持各種管道和漏斗直接交互。",
+  "ftbquests.chapter.dimensions.quest1935765613092955945.description1": "使用可以將經驗存儲到網絡中，並將經驗維持在單次提取量。潛行使用可以調整單次使用量。在網絡中手持經驗棒中鍵經驗流體可以取出經驗。",
+  "ftbquests.chapter.dimensions.quest1935765613092955945.description2": "\u0026e[WARN]超越維度的經驗流體與機械動力的不通用，需要攪拌轉換。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.description1": "隨着時間的推移，這個縫隙逐漸穩定下來。對這個縫隙進行改造，就能形成通往另一側的門扉，向另一側傳輸物質與能量。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.description2": "使用昂貴的材料製作門框後通道得以穩定，可以向對面傳輸物質與能量。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.description3": "這個時空間隙可以用於存儲超大規模的物質與能量，並且可以隨時按下 \u00262[O]\u0026r 訪問。",
+  "ftbquests.chapter.dimensions.quest2529637865491029484.title": "創建門扉",
+  "ftbquests.chapter.dimensions.quest3595179727660997213.description1": "對側似乎已有一些碎片，似乎是破開縫隙時掉落的，並且隨着時間推移不斷增加。",
+  "ftbquests.chapter.dimensions.quest3595179727660997213.description2": "這些碎片蘊含着時空的能量，似乎可以被拿來利用。",
+  "ftbquests.chapter.dimensions.quest3595179727660997213.title": "時空的結晶",
+  "ftbquests.chapter.dimensions.quest4775138932613252.description1": "空手潛行右鍵綁定到當前玩家所在的維度網絡。維度網絡管理員空手潛行右鍵可取消綁定。",
+  "ftbquests.chapter.dimensions.quest4775138932613252.description2": "綁定後允許任何玩家訪問網絡，無論是否為成員。",
+  "ftbquests.chapter.dimensions.quest4821770502208368981.description1": "綁定後允許任何玩家訪問網絡，無論是否為成員。",
+  "ftbquests.chapter.dimensions.quest4994870183790373882.description1": "看得出來你真的很閒，給你個電視自己去看吧。",
+  "ftbquests.chapter.dimensions.quest4994870183790373882.title": "\u00266隱藏：科技包？",
+  "ftbquests.chapter.dimensions.quest5465403080953689266.description1": "自動從綁定的網絡中提取食物餵食玩家。使用後打開菜單，可以設定工作方式與過濾。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description1": "空手潛行右鍵綁定到當前玩家所在的維度網絡。維度網絡管理員空手潛行右鍵可取消綁定。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description2": "網絡接口擁有27個標記槽位和27個存儲槽位，可以用其他模組的管道進行輸入輸出，可以存儲任何維度網絡能存儲的資源種類。破壞後會掉落保存了內容物的壓縮物質球以及方塊本身。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description3": "每tick，網絡接口都會嘗試將與標記不對應的存儲槽位的物品收回網絡，並從維度網絡抽取標記的物品到對應槽位。每9個tick，打開了彈出模式的網絡接口會將標記的物品彈出到周圍的有效方塊中。",
+  "ftbquests.chapter.dimensions.quest6181724146731165416.description4": "網絡泵則可以主動從周圍六個面的容器中抽取資源進入維度網絡，每10tick進行一次抽取，單次抽取沒有速率限制，理論上清空整個目標容器，可以抽取任何網絡支持的資源類型。內部有過濾槽，可以設置黑白名單。",
+  "ftbquests.chapter.dimensions.quest766235599067915222.description1": "借助於原初受火者的靈魂碎片，時空的一角得以被撕開。只是這個縫隙還不夠大，仍需要一定時間才能穩定。",
+  "ftbquests.chapter.dimensions.quest766235599067915222.description2": "[INFO]\u0026b5.4.2新增模組，旨在解決後期大規模存儲帶來的嚴重卡頓。短期玩家可以不做。建築手杖可以直接從網絡中提取方塊放置。",
+  "ftbquests.chapter.dimensions.quest766235599067915222.subtitle": "本章作者：PL",
+  "ftbquests.chapter.dimensions.quest766235599067915222.title": "\u00266撕開時空的一角",
+  "ftbquests.chapter.dimensions.quest7683465712072555335.description1": "收集範圍內的掉落物、經驗與流體。使用後打開菜單，可以設置過濾與工作方式。",
+  "ftbquests.chapter.dimensions.quest7727442900409044177.description1": "空手Shift右鍵綁定到當前玩家所在的維度網絡。維度網絡管理員空手Shift右鍵可取消綁定。",
+  "ftbquests.chapter.dimensions.quest7727442900409044177.description2": "將藍圖接口放在藍圖大炮旁邊，可以從網絡為藍圖大炮提供方塊。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.description1": "成員只能訪問網絡，不能綁定網絡終端或邀請其他人成為成員。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.description2": "管理員可以邀請其他人，所有者可以綁定網絡終端、摧毀網絡。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.description3": "可以通過網絡控制器管理權限。",
+  "ftbquests.chapter.dimensions.quest8702154082179339918.title": "權限控制",
+  "ftbquests.chapter.dimensions.title": "\u00265維度撕裂者",
   "ftbquests.chapter.farmers_delight.quest1194813050829271683.description1": "對於一些特定的生物，使用小刀擊殺可以獲取額外的掉落。",
   "ftbquests.chapter.farmers_delight.quest1194813050829271683.description2": "比如用小刀擊殺豬可以獲得火腿，擊殺末影龍可以獲得龍肉，擊殺村民可以獲取……怪肉？",
   "ftbquests.chapter.farmers_delight.quest1194813050829271683.title": "額外掉落",
@@ -971,7 +1004,7 @@
   "ftbquests.chapter.storage.quest1376433190469768193.description1": "容納特殊物品的袋子，類似於原版的收納袋。",
   "ftbquests.chapter.storage.quest1376433190469768193.description2": "操作邏輯與背包相同。",
   "ftbquests.chapter.storage.quest1376433190469768193.title": "袋子",
-  "ftbquests.chapter.storage.quest1632234935913171738.description1": "箱子適合存儲大量雜亂的物品與不可堆疊物品，但是卡頓更高。",
+  "ftbquests.chapter.storage.quest1632234935913171738.description1": "箱子適合存儲大量雜亂的物品與不可堆疊物品，但是卡頓更高。這些箱子也可以像普通箱子掛載到機械動力的動態結構上，但是更建議用桶。",
   "ftbquests.chapter.storage.quest2391315614506680509.description1": "可以在鍛造台上用空間升級組件升級背包和水晶匣子的容量。",
   "ftbquests.chapter.storage.quest2391315614506680509.title": "空間升級組件",
   "ftbquests.chapter.storage.quest249114456431522596.description1": "末影抽屜對於同一物品共享同一存儲空間，相較於不直觀的虛空箱子更適合物品的傳輸。",
@@ -990,7 +1023,7 @@
   "ftbquests.chapter.storage.quest6598230013459523962.description1": "水晶匣子可以存儲一種大量不帶有 NBT 的物品。",
   "ftbquests.chapter.storage.quest6598230013459523962.description2": "一級可以存儲64組物品，可以使用空間升級組件升級容量，每次升級增加 64 組容量。",
   "ftbquests.chapter.storage.quest6598230013459523962.description3": "水晶匣子同樣支持背包的操作邏輯。",
-  "ftbquests.chapter.storage.quest6690727180952870528.description1": "桶適合粘在移動結構上當存儲。",
+  "ftbquests.chapter.storage.quest6690727180952870528.description1": "桶適合掛載在移動結構上當存儲。",
   "ftbquests.chapter.storage.quest6690727180952870528.description2": "大量的物品還是使用抽屜吧。",
   "ftbquests.chapter.storage.quest6979187122773815040.description1": "顧名思義，末影背包可以訪問玩家的末影箱；但是它也有背包的性質，可以正常吸取物品。",
   "ftbquests.chapter.storage.quest6979187122773815040.description2": "末影背包內可以裝空間背包。一個理想的倉庫是 末影背包-空間背包-背包-匣子 的架構，最多可以存儲 10 億物品，自動歸類 31104 種物品。",
