feat(common): smc lucky clover
feat(common): FTBQ

feat(common): aad mod

--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
@@ -1110,7 +1110,7 @@
     "ftbquests.chapter.stuff.quest7041082676781857080.description1": "Burn discs with the recorder or computer and play them in a Music Player.",
     "ftbquests.chapter.stuff.quest7041082676781857080.description2": "Music Player are fun because they interact with the world.",
     "ftbquests.chapter.stuff.quest730619484876150414.description1": "Use it to light up your town.",
-    "ftbquests.chapter.stuff.quest730619484876150414.title": "Lighting Wand",
+    "ftbquests.chapter.stuff.quest730619484876150414.title": "Kinetic Illuminator",
     "ftbquests.chapter.stuff.quest7946882653284881569.description1": "@supplementaries",
     "ftbquests.chapter.stuff.quest7946882653284881569.description2": "A pile of quirky yet useful gadgets.",
     "ftbquests.chapter.stuff.quest7946882653284881569.description3": "Faucet: Who's calling me?",
