--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
@@ -1106,7 +1106,7 @@
   "ftbquests.chapter.stuff.quest7041082676781857080.description1": "用刻录机或者电脑获得唱片后放到唱片机里面就可以播放音乐。",
   "ftbquests.chapter.stuff.quest7041082676781857080.description2": "当然如果你在服务器的话可以用 \u00262/music\u0026r 命令点歌，不过唱片机的好处是可以与世界交互，比较有节目效果。",
   "ftbquests.chapter.stuff.quest730619484876150414.description1": "使用它来照亮你的小镇。",
-  "ftbquests.chapter.stuff.quest730619484876150414.title": "照明魔杖",
+  "ftbquests.chapter.stuff.quest730619484876150414.title": "动能照明器",
   "ftbquests.chapter.stuff.quest7946882653284881569.description1": "@supplementaries",
   "ftbquests.chapter.stuff.quest7946882653284881569.description2": "一堆杂乱但是有用的小玩意。",
   "ftbquests.chapter.stuff.quest7946882653284881569.description3": "水龙头：谁在召唤我？",
