--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_hk.json
@@ -1106,7 +1106,7 @@
   "ftbquests.chapter.stuff.quest7041082676781857080.description1": "用刻錄機或者電腦獲得唱片後放到唱片機裏面就可以播放音樂。",
   "ftbquests.chapter.stuff.quest7041082676781857080.description2": "當然如果你在伺服器的話可以用 \u00262/music\u0026r 命令點歌，不過唱片機的好處是可以與世界交互，比較有節目效果。",
   "ftbquests.chapter.stuff.quest730619484876150414.description1": "使用它來照亮你的小鎮。",
-  "ftbquests.chapter.stuff.quest730619484876150414.title": "照明魔杖",
+  "ftbquests.chapter.stuff.quest730619484876150414.title": "動能照明器",
   "ftbquests.chapter.stuff.quest7946882653284881569.description1": "@supplementaries",
   "ftbquests.chapter.stuff.quest7946882653284881569.description2": "一堆雜亂但是有用的小玩意。",
   "ftbquests.chapter.stuff.quest7946882653284881569.description3": "水龍頭：誰在召喚我？",
